--- a/checkout.html
+++ b/checkout.html
@@ -25,14 +25,18 @@
       <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
           <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
           <li class="nav-item"><a class="nav-link active" href="checkout.html">Checkout</a></li>
         </ul>
 
-        <div class="d-flex gap-2">
-          <a class="btn btn-outline-dark iconbtn" href="#" title="Wishlist"><i class="bi bi-heart"></i></a>
-          <a class="btn btn-outline-dark iconbtn" href="cart.html" title="Cart"><i class="bi bi-bag"></i></a>
-          <a class="btn btn-dark" href="#"><i class="bi bi-person-circle me-1"></i> Account</a>
+        <div class="d-flex gap-2 align-items-center">
+          <a class="btn btn-outline-dark iconbtn position-relative" href="cart.html" title="Cart">
+            <i class="bi bi-bag"></i>
+            <span id="cartBadge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+              0
+            </span>
+          </a>
         </div>
       </div>
     </div>
@@ -42,7 +46,7 @@
   <header class="py-4">
     <div class="container">
       <h1 class="fw-bold mb-1">Checkout</h1>
-      <p class="text-muted mb-0">Fill in your details to place the order.</p>
+      <p class="text-muted mb-0">Shipping + Payment + Order summary (from localStorage).</p>
     </div>
   </header>
 
@@ -54,7 +58,7 @@
           <div class="bg-white border rounded-4 p-3 p-md-4">
             <h2 class="fw-bold fs-5 mb-3">Shipping Information</h2>
 
-            <form>
+            <form id="checkoutForm">
               <div class="row g-3">
                 <div class="col-md-6">
                   <label class="form-label">Full Name</label>
@@ -126,15 +130,25 @@
                 <a href="cart.html" class="btn btn-outline-dark btn-lg">
                   <i class="bi bi-arrow-left me-1"></i> Back to Cart
                 </a>
-                <button type="button" class="btn btn-dark btn-lg" data-bs-toggle="modal" data-bs-target="#successModal">
+
+                <button id="placeOrderBtn" type="submit" class="btn btn-dark btn-lg">
                   Place Order <i class="bi bi-check2-circle ms-1"></i>
                 </button>
               </div>
 
               <div class="small text-muted mt-3">
-                This is a demo checkout UI. You can connect a backend later (Node/PHP/Django).
+                Demo checkout: it clears cart after placing order.
               </div>
             </form>
+          </div>
+
+          <!-- If cart empty -->
+          <div id="emptyCartNotice" class="bg-white border rounded-4 p-4 mt-4 d-none">
+            <div class="fw-bold fs-5 mb-1">Your cart is empty</div>
+            <div class="text-muted mb-3">Please add some products before checkout.</div>
+            <a class="btn btn-dark" href="products.html">
+              Browse Products <i class="bi bi-arrow-right ms-1"></i>
+            </a>
           </div>
         </div>
 
@@ -143,21 +157,31 @@
           <div class="bg-white border rounded-4 p-3 p-md-4 sticky-lg-top" style="top: 90px;">
             <div class="fw-bold fs-5 mb-3">Order Summary</div>
 
+            <!-- Items -->
+            <div id="summaryItems" class="small"></div>
+
+            <hr class="my-3">
+
             <div class="d-flex justify-content-between mb-2">
               <div class="text-muted">Subtotal</div>
-              <div class="fw-semibold">৳4798</div>
+              <div class="fw-semibold">৳<span id="subtotal">0</span></div>
             </div>
 
             <div class="d-flex justify-content-between mb-2">
               <div class="text-muted">Delivery</div>
-              <div class="fw-semibold">৳120</div>
+              <div class="fw-semibold">৳<span id="delivery">120</span></div>
+            </div>
+
+            <div class="d-flex justify-content-between mb-3">
+              <div class="text-muted">Discount</div>
+              <div class="fw-semibold">-৳<span id="discount">0</span></div>
             </div>
 
             <hr>
 
             <div class="d-flex justify-content-between align-items-center mb-3">
               <div class="fw-bold">Total</div>
-              <div class="fw-bold fs-4">৳4918</div>
+              <div class="fw-bold fs-4">৳<span id="grandTotal">0</span></div>
             </div>
 
             <div class="small text-muted">
@@ -180,7 +204,7 @@
           <p class="text-muted mb-3">Thanks! Your order has been received (demo).</p>
           <div class="d-flex gap-2 justify-content-center">
             <a href="index.html" class="btn btn-outline-dark">Back to Home</a>
-            <a href="cart.html" class="btn btn-dark">View Cart</a>
+            <a href="products.html" class="btn btn-dark">Shop More</a>
           </div>
         </div>
       </div>
@@ -188,5 +212,116 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    // ---------- MUST MATCH products/cart ----------
+    const CART_KEY = "mallmart_cart";
+
+    const PRODUCTS = [
+      { id: 1, title: "Wireless Headphones", category: "Electronics", price: 2799 },
+      { id: 2, title: "Casual Sneakers", category: "Fashion", price: 1999 },
+      { id: 3, title: "Air Fryer 3.5L", category: "Home", price: 5499 },
+      { id: 4, title: "Organic Honey 500g", category: "Groceries", price: 699 },
+      { id: 5, title: "Smart Watch", category: "Electronics", price: 2599 },
+      { id: 6, title: "Backpack", category: "Fashion", price: 1299 }
+    ];
+
+    const delivery = 120;
+    const discount = 0;
+
+    function getCart() {
+      return JSON.parse(localStorage.getItem(CART_KEY) || "[]");
+    }
+
+    function cartCount(cart) {
+      return cart.reduce((sum, it) => sum + (it.qty || 0), 0);
+    }
+
+    function money(n) {
+      return Number(n).toLocaleString();
+    }
+
+    function updateBadge() {
+      const cart = getCart();
+      document.getElementById("cartBadge").textContent = cartCount(cart);
+    }
+
+    function renderSummary() {
+      const cart = getCart();
+      updateBadge();
+
+      const emptyNotice = document.getElementById("emptyCartNotice");
+      const form = document.getElementById("checkoutForm");
+      const placeBtn = document.getElementById("placeOrderBtn");
+
+      const summaryItems = document.getElementById("summaryItems");
+
+      if (!cart.length) {
+        emptyNotice.classList.remove("d-none");
+        form.classList.add("d-none");
+        summaryItems.innerHTML = "";
+        setTotals(0);
+        return;
+      }
+
+      emptyNotice.classList.add("d-none");
+      form.classList.remove("d-none");
+      placeBtn.disabled = false;
+
+      let subtotal = 0;
+      let html = `<div class="d-grid gap-2">`;
+
+      cart.forEach(item => {
+        const p = PRODUCTS.find(x => x.id === item.id);
+        if (!p) return;
+        const qty = Math.max(1, Number(item.qty || 1));
+        const line = p.price * qty;
+        subtotal += line;
+
+        html += `
+          <div class="d-flex justify-content-between align-items-start">
+            <div class="me-2">
+              <div class="fw-semibold">${p.title}</div>
+              <div class="text-muted">Qty: ${qty}</div>
+            </div>
+            <div class="fw-semibold">৳${money(line)}</div>
+          </div>
+        `;
+      });
+
+      html += `</div>`;
+      summaryItems.innerHTML = html;
+
+      setTotals(subtotal);
+    }
+
+    function setTotals(subtotal) {
+      document.getElementById("subtotal").textContent = money(subtotal);
+      document.getElementById("delivery").textContent = money(delivery);
+      document.getElementById("discount").textContent = money(discount);
+      document.getElementById("grandTotal").textContent = money(subtotal + delivery - discount);
+    }
+
+    // Handle Place Order (demo)
+    document.getElementById("checkoutForm").addEventListener("submit", (e) => {
+      e.preventDefault();
+
+      const cart = getCart();
+      if (!cart.length) return;
+
+      // Clear cart after successful "order"
+      localStorage.removeItem(CART_KEY);
+
+      // Show modal
+      const modal = new bootstrap.Modal(document.getElementById("successModal"));
+      modal.show();
+
+      // Re-render
+      renderSummary();
+    });
+
+    // Init
+    renderSummary();
+  </script>
 </body>
 </html>
