--- a/products.html
+++ b/products.html
@@ -151,25 +151,30 @@
   <script>
     // ---------- Demo Product Data ----------
     const PRODUCTS = [
-      { id: 1, title: "Wireless Headphones", category: "Electronics", price: 2799, oldPrice: 3499, rating: 4.6, badge: "-20%" },
+    const PRODUCTS = [
 
-      { id: 7, title: "Bluetooth Speaker", category: "Electronics", price: 1899, oldPrice: 2299, rating: 4.3, badge: "Hot" },
-      { id: 8, title: "Gaming Mouse RGB", category: "Electronics", price: 1499, oldPrice: null, rating: 4.5, badge: "New" },
-      { id: 9, title: "4K Smart TV 43 inch", category: "Electronics", price: 38999, oldPrice: 42999, rating: 4.8, badge: "-10%" },
-      { id: 2, title: "Casual Sneakers", category: "Fashion", price: 1999, oldPrice: null, rating: 4.4, badge: "New" },
-      { id: 3, title: "Air Fryer 3.5L", category: "Home", price: 5499, oldPrice: null, rating: 4.7, badge: "Hot" },
-      { id: 4, title: "Organic Honey 500g", category: "Groceries", price: 699, oldPrice: null, rating: 4.5, badge: "Best" },
-      { id: 5, title: "Smart Watch", category: "Electronics", price: 2599, oldPrice: 2999, rating: 4.3, badge: "-10%" },
-      { id: 6, title: "Backpack", category: "Fashion", price: 1299, oldPrice: null, rating: 4.2, badge: "New" }
-      
-      { id: 10, title: "Men's Denim Jacket", category: "Fashion", price: 2499, oldPrice: null, rating: 4.2, badge: "New" },
-      { id: 11, title: "Women's Handbag", category: "Fashion", price: 1799, oldPrice: 2199, rating: 4.4, badge: "-15%" },
-      { id: 12, title: "Running Shoes", category: "Fashion", price: 3299, oldPrice: null, rating: 4.6, badge: "Best" },
-      { id: 13, title: "Basmati Rice 5kg", category: "Groceries", price: 699, oldPrice: null, rating: 4.5, badge: "Best" },
-      { id: 14, title: "Olive Oil 1L", category: "Groceries", price: 1199, oldPrice: 1399, rating: 4.3, badge: "-10%" },
-      { id: 15, title: "Green Tea Pack", category: "Groceries", price: 399, oldPrice: null, rating: 4.2, badge: "New" },
+  { id: 1, title: "Wireless Headphones", category: "Electronics", price: 2799, oldPrice: 3499, rating: 4.6, badge: "-20%" },
 
-    ];
+  { id: 7, title: "Bluetooth Speaker", category: "Electronics", price: 1899, oldPrice: 2299, rating: 4.3, badge: "Hot" },
+  { id: 8, title: "Gaming Mouse RGB", category: "Electronics", price: 1499, oldPrice: null, rating: 4.5, badge: "New" },
+  { id: 9, title: "4K Smart TV 43 inch", category: "Electronics", price: 38999, oldPrice: 42999, rating: 4.8, badge: "-10%" },
+
+  { id: 2, title: "Casual Sneakers", category: "Fashion", price: 1999, oldPrice: null, rating: 4.4, badge: "New" },
+  { id: 3, title: "Air Fryer 3.5L", category: "Home", price: 5499, oldPrice: null, rating: 4.7, badge: "Hot" },
+  { id: 4, title: "Organic Honey 500g", category: "Groceries", price: 699, oldPrice: null, rating: 4.5, badge: "Best" },
+  { id: 5, title: "Smart Watch", category: "Electronics", price: 2599, oldPrice: 2999, rating: 4.3, badge: "-10%" },
+  { id: 6, title: "Backpack", category: "Fashion", price: 1299, oldPrice: null, rating: 4.2, badge: "New" },
+
+  { id: 10, title: "Men's Denim Jacket", category: "Fashion", price: 2499, oldPrice: null, rating: 4.2, badge: "New" },
+  { id: 11, title: "Women's Handbag", category: "Fashion", price: 1799, oldPrice: 2199, rating: 4.4, badge: "-15%" },
+  { id: 12, title: "Running Shoes", category: "Fashion", price: 3299, oldPrice: null, rating: 4.6, badge: "Best" },
+
+  { id: 13, title: "Basmati Rice 5kg", category: "Groceries", price: 699, oldPrice: null, rating: 4.5, badge: "Best" },
+  { id: 14, title: "Olive Oil 1L", category: "Groceries", price: 1199, oldPrice: 1399, rating: 4.3, badge: "-10%" },
+  { id: 15, title: "Green Tea Pack", category: "Groceries", price: 399, oldPrice: null, rating: 4.2, badge: "New" }
+
+];
+
 
     // ---------- Cart helpers (localStorage) ----------
     const CART_KEY = "mallmart_cart";
