--- a/products.html
+++ b/products.html
@@ -149,8 +149,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    // ---------- Demo Product Data ----------
-    const PRODUCTS = [
+    // ---------- Demo Product Data ---------
     const PRODUCTS = [
 
   { id: 1, title: "Wireless Headphones", category: "Electronics", price: 2799, oldPrice: 3499, rating: 4.6, badge: "-20%" },
