--- a/products.html
+++ b/products.html
@@ -125,6 +125,7 @@
                   ৳<span id="qvOldPrice"></span>
                 </div>
               </div>
+
               <p class="text-muted mb-3">
                 Premium quality product for daily use. (Demo description — you can replace later)
               </p>
@@ -133,7 +134,7 @@
                 <a id="qvDetailsLink" class="btn btn-outline-dark" href="product-details.html">
                   View Details
                 </a>
-                <button id="qvAddBtn" class="btn btn-dark">
+                <button id="qvAddBtn" class="btn btn-dark" type="button">
                   <i class="bi bi-bag-plus me-1"></i> Add to Cart
                 </button>
                 <a class="btn btn-outline-dark" href="cart.html">Go to Cart</a>
@@ -149,31 +150,28 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    // ---------- Demo Product Data ---------
+    // ---------- Demo Product Data ----------
     const PRODUCTS = [
+      { id: 1, title: "Wireless Headphones", category: "Electronics", price: 2799, oldPrice: 3499, rating: 4.6, badge: "-20%" },
 
-  { id: 1, title: "Wireless Headphones", category: "Electronics", price: 2799, oldPrice: 3499, rating: 4.6, badge: "-20%" },
+      { id: 7, title: "Bluetooth Speaker", category: "Electronics", price: 1899, oldPrice: 2299, rating: 4.3, badge: "Hot" },
+      { id: 8, title: "Gaming Mouse RGB", category: "Electronics", price: 1499, oldPrice: null, rating: 4.5, badge: "New" },
+      { id: 9, title: "4K Smart TV 43 inch", category: "Electronics", price: 38999, oldPrice: 42999, rating: 4.8, badge: "-10%" },
 
-  { id: 7, title: "Bluetooth Speaker", category: "Electronics", price: 1899, oldPrice: 2299, rating: 4.3, badge: "Hot" },
-  { id: 8, title: "Gaming Mouse RGB", category: "Electronics", price: 1499, oldPrice: null, rating: 4.5, badge: "New" },
-  { id: 9, title: "4K Smart TV 43 inch", category: "Electronics", price: 38999, oldPrice: 42999, rating: 4.8, badge: "-10%" },
+      { id: 2, title: "Casual Sneakers", category: "Fashion", price: 1999, oldPrice: null, rating: 4.4, badge: "New" },
+      { id: 3, title: "Air Fryer 3.5L", category: "Home", price: 5499, oldPrice: null, rating: 4.7, badge: "Hot" },
+      { id: 4, title: "Organic Honey 500g", category: "Groceries", price: 699, oldPrice: null, rating: 4.5, badge: "Best" },
+      { id: 5, title: "Smart Watch", category: "Electronics", price: 2599, oldPrice: 2999, rating: 4.3, badge: "-10%" },
+      { id: 6, title: "Backpack", category: "Fashion", price: 1299, oldPrice: null, rating: 4.2, badge: "New" },
 
-  { id: 2, title: "Casual Sneakers", category: "Fashion", price: 1999, oldPrice: null, rating: 4.4, badge: "New" },
-  { id: 3, title: "Air Fryer 3.5L", category: "Home", price: 5499, oldPrice: null, rating: 4.7, badge: "Hot" },
-  { id: 4, title: "Organic Honey 500g", category: "Groceries", price: 699, oldPrice: null, rating: 4.5, badge: "Best" },
-  { id: 5, title: "Smart Watch", category: "Electronics", price: 2599, oldPrice: 2999, rating: 4.3, badge: "-10%" },
-  { id: 6, title: "Backpack", category: "Fashion", price: 1299, oldPrice: null, rating: 4.2, badge: "New" },
+      { id: 10, title: "Men's Denim Jacket", category: "Fashion", price: 2499, oldPrice: null, rating: 4.2, badge: "New" },
+      { id: 11, title: "Women's Handbag", category: "Fashion", price: 1799, oldPrice: 2199, rating: 4.4, badge: "-15%" },
+      { id: 12, title: "Running Shoes", category: "Fashion", price: 3299, oldPrice: null, rating: 4.6, badge: "Best" },
 
-  { id: 10, title: "Men's Denim Jacket", category: "Fashion", price: 2499, oldPrice: null, rating: 4.2, badge: "New" },
-  { id: 11, title: "Women's Handbag", category: "Fashion", price: 1799, oldPrice: 2199, rating: 4.4, badge: "-15%" },
-  { id: 12, title: "Running Shoes", category: "Fashion", price: 3299, oldPrice: null, rating: 4.6, badge: "Best" },
-
-  { id: 13, title: "Basmati Rice 5kg", category: "Groceries", price: 699, oldPrice: null, rating: 4.5, badge: "Best" },
-  { id: 14, title: "Olive Oil 1L", category: "Groceries", price: 1199, oldPrice: 1399, rating: 4.3, badge: "-10%" },
-  { id: 15, title: "Green Tea Pack", category: "Groceries", price: 399, oldPrice: null, rating: 4.2, badge: "New" }
-
-];
-
+      { id: 13, title: "Basmati Rice 5kg", category: "Groceries", price: 699, oldPrice: null, rating: 4.5, badge: "Best" },
+      { id: 14, title: "Olive Oil 1L", category: "Groceries", price: 1199, oldPrice: 1399, rating: 4.3, badge: "-10%" },
+      { id: 15, title: "Green Tea Pack", category: "Groceries", price: 399, oldPrice: null, rating: 4.2, badge: "New" }
+    ];
 
     // ---------- Cart helpers (localStorage) ----------
     const CART_KEY = "mallmart_cart";
@@ -187,22 +185,21 @@
     }
     function updateCartBadge() {
       const cart = getCart();
-      const count = cart.reduce((sum, item) => sum + item.qty, 0);
-      document.getElementById("cartBadge").textContent = count;
+      const count = cart.reduce((sum, item) => sum + (item.qty || 0), 0);
+      const badge = document.getElementById("cartBadge");
+      if (badge) badge.textContent = count;
     }
     function addToCart(productId) {
       const cart = getCart();
       const found = cart.find(i => i.id === productId);
       if (found) found.qty += 1;
       else cart.push({ id: productId, qty: 1 });
-
       setCart(cart);
     }
 
     // ---------- Render ----------
     const grid = document.getElementById("productGrid");
     const emptyState = document.getElementById("emptyState");
-
     let activeCategory = "all";
 
     function productCard(p) {
@@ -213,116 +210,121 @@
         "bg-success";
 
       return `
-      <div class="col-12 col-sm-6 col-lg-4">
-        <div class="product-card h-100">
-          <div class="product-img">
-            ${p.badge ? `<span class="badge ${badgeClass}">${p.badge}</span>` : ""}
-            <button class="btn btn-light btn-sm heart" type="button" title="Wishlist">
-              <i class="bi bi-heart"></i>
-            </button>
-            <div class="img-placeholder">Product Image</div>
-          </div>
-          <div class="p-3">
-            <div class="small text-muted">${p.category}</div>
-            <a class="fw-semibold text-decoration-none text-dark d-block mb-1" href="product-details.html">
-              ${p.title}
-            </a>
-            <div class="rating small mb-2">
-              <i class="bi bi-star-fill"></i> ${p.rating.toFixed(1)}
-              <span class="text-muted">(demo)</span>
+        <div class="col-12 col-sm-6 col-lg-4">
+          <div class="product-card h-100">
+            <div class="product-img">
+              ${p.badge ? `<span class="badge ${badgeClass}">${p.badge}</span>` : ""}
+              <button class="btn btn-light btn-sm heart" type="button" title="Wishlist">
+                <i class="bi bi-heart"></i>
+              </button>
+
+              <a href="product-details.html?id=${p.id}" class="text-decoration-none text-dark">
+                <div class="img-placeholder">Product Image</div>
+              </a>
             </div>
 
-            <div class="d-flex align-items-center justify-content-between">
-              <div>
-                <div class="price">৳${p.price.toLocaleString()}</div>
-                ${p.oldPrice ? `<div class="small text-muted text-decoration-line-through">৳${p.oldPrice.toLocaleString()}</div>` : `<div class="small text-muted">&nbsp;</div>`}
+            <div class="p-3">
+              <div class="small text-muted">${p.category}</div>
+
+              <a class="fw-semibold text-decoration-none text-dark d-block mb-1"
+                 href="product-details.html?id=${p.id}">
+                ${p.title}
+              </a>
+
+              <div class="rating small mb-2">
+                <i class="bi bi-star-fill"></i> ${p.rating.toFixed(1)}
+                <span class="text-muted">(demo)</span>
               </div>
 
-              <div class="d-flex gap-2">
-                <button class="btn btn-outline-dark btn-sm" type="button"
-                  data-action="quick" data-id="${p.id}">
-                  Quick View
-                </button>
-                <button class="btn btn-dark btn-sm" type="button"
-                  data-action="add" data-id="${p.id}">
-                  <i class="bi bi-bag-plus me-1"></i> Add
-                </button>
+              <div class="d-flex align-items-center justify-content-between">
+                <div>
+                  <div class="price">৳${p.price.toLocaleString()}</div>
+                  ${p.oldPrice
+                    ? `<div class="small text-muted text-decoration-line-through">৳${p.oldPrice.toLocaleString()}</div>`
+                    : `<div class="small text-muted">&nbsp;</div>`
+                  }
+                </div>
+
+                <div class="d-flex gap-2">
+                  <button class="btn btn-outline-dark btn-sm" type="button" data-action="quick" data-id="${p.id}">
+                    Quick View
+                  </button>
+                  <button class="btn btn-dark btn-sm" type="button" data-action="add" data-id="${p.id}">
+                    <i class="bi bi-bag-plus me-1"></i> Add
+                  </button>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>`;
+      `;
     }
 
-   function applyFilters() {
-  const topEl = document.getElementById("searchInputTop");
-  const mobEl = document.getElementById("searchInputMobile");
-  const sortEl = document.getElementById("sortSelect");
+    function applyFilters() {
+      const topEl = document.getElementById("searchInputTop");
+      const mobEl = document.getElementById("searchInputMobile");
+      const sortEl = document.getElementById("sortSelect");
 
-  const searchTop = topEl ? topEl.value.trim().toLowerCase() : "";
-  const searchMobile = mobEl ? mobEl.value.trim().toLowerCase() : "";
-  const q = (searchTop || searchMobile);
+      const searchTop = topEl ? topEl.value.trim().toLowerCase() : "";
+      const searchMobile = mobEl ? mobEl.value.trim().toLowerCase() : "";
+      const q = (searchTop || searchMobile);
 
-  let list = PRODUCTS.slice();
+      let list = PRODUCTS.slice();
 
-  // category filter
-  if (activeCategory !== "all") {
-    list = list.filter(p => p.category === activeCategory);
-  }
+      if (activeCategory !== "all") {
+        list = list.filter(p => p.category === activeCategory);
+      }
 
-  // search filter
-  if (q) {
-    list = list.filter(p => p.title.toLowerCase().includes(q));
-  }
+      if (q) {
+        list = list.filter(p => p.title.toLowerCase().includes(q));
+      }
 
-  // sorting
-  const sort = sortEl ? sortEl.value : "recommended";
-  if (sort === "low") list.sort((a, b) => a.price - b.price);
-  if (sort === "high") list.sort((a, b) => b.price - a.price);
-  if (sort === "name") list.sort((a, b) => a.title.localeCompare(b.title));
+      const sort = sortEl ? sortEl.value : "recommended";
+      if (sort === "low") list.sort((a, b) => a.price - b.price);
+      if (sort === "high") list.sort((a, b) => b.price - a.price);
+      if (sort === "name") list.sort((a, b) => a.title.localeCompare(b.title));
 
-  // render (safety)
-  if (!grid) return;
+      if (!grid) return;
 
-  grid.innerHTML = list.map(productCard).join("");
-  emptyState.classList.toggle("d-none", list.length !== 0);
-}
+      grid.innerHTML = list.map(productCard).join("");
+      if (emptyState) emptyState.classList.toggle("d-none", list.length !== 0);
+    }
 
-// ---------- Events ----------
-document.getElementById("sortSelect")?.addEventListener("change", applyFilters);
+    // ---------- Events ----------
+    document.getElementById("sortSelect")?.addEventListener("change", applyFilters);
 
-document.getElementById("searchInputTop")?.addEventListener("input", () => {
-  const topEl = document.getElementById("searchInputTop");
-  const mobEl = document.getElementById("searchInputMobile");
-  if (mobEl && topEl) mobEl.value = topEl.value;
-  applyFilters();
-});
-
-document.getElementById("searchInputMobile")?.addEventListener("input", () => {
-  const topEl = document.getElementById("searchInputTop");
-  const mobEl = document.getElementById("searchInputMobile");
-  if (topEl && mobEl) topEl.value = mobEl.value;
-  applyFilters();
-});
-
-document.querySelectorAll(".filter-btn").forEach(btn => {
-  btn.addEventListener("click", () => {
-    document.querySelectorAll(".filter-btn").forEach(b => {
-      b.classList.remove("btn-dark");
-      b.classList.add("btn-outline-dark");
+    document.getElementById("searchInputTop")?.addEventListener("input", () => {
+      const topEl = document.getElementById("searchInputTop");
+      const mobEl = document.getElementById("searchInputMobile");
+      if (mobEl && topEl) mobEl.value = topEl.value;
+      applyFilters();
     });
 
-    btn.classList.remove("btn-outline-dark");
-    btn.classList.add("btn-dark");
+    document.getElementById("searchInputMobile")?.addEventListener("input", () => {
+      const topEl = document.getElementById("searchInputTop");
+      const mobEl = document.getElementById("searchInputMobile");
+      if (topEl && mobEl) topEl.value = mobEl.value;
+      applyFilters();
+    });
 
-    activeCategory = btn.dataset.category || "all";
-    applyFilters();
-  });
-});
+    document.querySelectorAll(".filter-btn").forEach(btn => {
+      btn.addEventListener("click", () => {
+        document.querySelectorAll(".filter-btn").forEach(b => {
+          b.classList.remove("btn-dark");
+          b.classList.add("btn-outline-dark");
+        });
 
+        btn.classList.remove("btn-outline-dark");
+        btn.classList.add("btn-dark");
+
+        activeCategory = btn.dataset.category || "all";
+        applyFilters();
+      });
+    });
 
     // Delegate clicks for Add & Quick View
-    const qvModal = new bootstrap.Modal(document.getElementById("quickViewModal"));
+    const qvModalEl = document.getElementById("quickViewModal");
+    const qvModal = qvModalEl ? new bootstrap.Modal(qvModalEl) : null;
     let qvCurrentId = null;
 
     document.addEventListener("click", (e) => {
@@ -338,11 +340,16 @@ document.querySelectorAll(".filter-btn").forEach(btn => {
         addToCart(id);
       }
 
-      if (action === "quick") {
+      if (action === "quick" && qvModal) {
         qvCurrentId = id;
+
         document.getElementById("qvCategory").textContent = p.category;
         document.getElementById("qvTitle").textContent = p.title;
         document.getElementById("qvPrice").textContent = p.price.toLocaleString();
+
+        // ✅ Dynamic View Details link
+        const detailsLink = document.getElementById("qvDetailsLink");
+        if (detailsLink) detailsLink.href = `product-details.html?id=${p.id}`;
 
         const oldWrap = document.getElementById("qvOldPriceWrap");
         if (p.oldPrice) {
@@ -356,7 +363,7 @@ document.querySelectorAll(".filter-btn").forEach(btn => {
       }
     });
 
-    document.getElementById("qvAddBtn").addEventListener("click", () => {
+    document.getElementById("qvAddBtn")?.addEventListener("click", () => {
       if (qvCurrentId) addToCart(qvCurrentId);
     });
 
